# FlatQuant-EXAONE4.5

./: .gitignore  .gitmodules  EXAONE45_QUICKSTART.md  README.md  VLLM_AWQ_FLATQUANT_W4A16_PATH.md  requirements-vllm.txt  setup.py
.superpowers/sdd/: task-3-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-a100-crossover.json  task-8-report.md  task-9-report.md
benchmarks/: benchmark_exaone45_latency.py  eval_exaone45_flatquant.py  kernel_benchmark.py  profile_exaone45_prefill.py  transform_kernel_benchmark.py  w4a4_dispatch_benchmark.py  w4a4_gemm_benchmark.py
benchmarks/exaone45/: common.py  latency.py  ppl.py  prefill_profile.py  profile_vllm.sh  text_eval.py  vllm_awq.py  vllm_common.py  vllm_w4a4.py  vlm.py  w4a4_throughput_matrix.py
deploy/: __init__.py  w4a4_fake.py
flatquant_vllm/: __init__.py  triton_transform.py
flatquant_w4a4/: __init__.py  format.py  packing.py
scripts/: setup_vllm_env.sh
tests/: test_exaone45_w4a4_logits.py  test_export_flatquant_vllm.py  test_export_flatquant_w4a4_vllm.py  test_linear_w4a16.py  test_linear_w4a4.py  test_triton_transform.py  test_vllm_awq_benchmark.py  test_vllm_common.py  test_vllm_w4a4_plugin.py  test_w4a4_dispatch_benchmark.py  test_w4a4_format.py  test_w4a4_throughput_matrix.py  test_w4a4_transform_quant.py
tools/: __init__.py  export_flatquant_vllm.py  export_flatquant_w4a4_vllm.py
vllm_plugin/: pyproject.toml
vllm_plugin/flatquant_vllm_plugin/: __init__.py  config.py  transform.py  triton_transform_v2.py  w4a4_config.py  w4a4_ops.py  w4a4_transform_quant.py
(+14 files in other folders)
